Set alignment and some correction

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@
   :root {
     --textColor: #FFFFFF;
     --backgroundColor: #000000;
-    --fontColor:#ffffffb5;
+    --fontColor:#FFFFFF;
     --secondColor:#61D836;
     --fontStyle1: Gotham-HTF;
     --fontStyle2: Gotham-light;
@@ -48,12 +48,9 @@
     padding-right: 20px;
   }
   .roro-header{
-      position: fixed;
-      width: 100%;
+      height: 77px;
       z-index: 9999;
       background: #000000;
-      height: 80px;
-      top: 0;
   }
   .roro-logo{
       width: 141px;
@@ -67,7 +64,6 @@
   }
   /*-- ====== Main Section ====== --*/
   .banner{
-      margin-top: 85px;
       position: relative;
   }
   .r-right-img{
@@ -76,7 +72,7 @@
   }
   .r-banner{
     position: relative;
-    top: -35px;
+    top: -28px;
   }
   .r-banner-text{
     padding: 9rem 0 0;
@@ -104,7 +100,7 @@
   }
 
   .roro-serving{
-      padding: 40px 0px;
+      padding: 90px 0px;
       position: relative;
   }
   .roro-serving-head h4{
@@ -114,11 +110,16 @@
       color: var( --fontColor);
   }
   .underline{
-      width: 100px;
+      width: 75px;
+      margin-bottom: 58px;
   }
-  .roro-serving-head span{
-    color: var( --secondColor);
-    font-size: var( --fontSize2);
+  .r-dot{
+    background-color: var( --secondColor);
+    height: 6px;
+    width: 6px;
+    position: relative;
+    right: -4px;
+    top: 17px;
   }
   .r-brand-services ul{
       list-style: none;
@@ -128,7 +129,7 @@
       font-family: var( --fontStyle3);
       font-size: var( --fontSize1);
       font-weight: 500;
-      padding: 10px 0px;
+      padding: 20px 0px;
   }
   .r-serving-img{
     text-align: center;
@@ -138,15 +139,20 @@
   .r-s-img{
     position: absolute;
     left: 0;
-    top: -3rem;
+    top: 3rem;
+  }
+  .r-process{
+    margin-top: 30px;
   }
 .r-recent-box p{
   font-family: var( --fontStyle3);
   font-size: var( --fontSize1);
-  padding-right: 70px;
+  /* padding-right: 70px; */
   line-height: 60px;
   font-weight: 500;
   color: #fff;
+  width: 524px;
+  height: 360px;
 }
 .r-recent-box a{
   text-decoration: underline;
@@ -174,9 +180,9 @@
   display: none;
   position: absolute;
 }
-.grinbid-logo{
+/* .grinbid-logo{
   width: 80px;
-}
+} */
 .mb-6{
   height: 5rem;
 }
@@ -217,6 +223,15 @@
     .r-airborn-img{
      display: none;
     }
+  }
+  @media screen and (min-width:1600px) {
+    .r-banner-text{
+      padding: 256px 0 0;
+    }
+    .r-banner {
+      position: relative;
+      top: 50px;
+  } 
   }
   @media screen and (max-width: 1390px){
     .pro-golf{
